[package]
name = "spnagent"
version = "0.96.12"
edition = "2024"

[lib]
name = "ep_lib"
path = "src/lib.rs"

[[bin]]
name = "provider"
path = "src/bin/provider.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
quinn = "0.11"
rand = "0.10"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
x509-parser = "0.18"
